libpurple/wrapper/Blist.cs


		public static PurpleAccount ChatGetAccount(PurpleChat chat)
		{
			return new PurpleAccount(purple_chat_get_account(chat.Reference));
		}

		/*
		 * GHashTable * purple_chat_get_components(PurpleChat * chat)
		 * 
		 * Could not generate a wrapper for purple_chat_get_components in file "blist.h".
		 * Message: The type could not be resolved (GHashTable * purple_chat_get_components(PurpleChat * chat)).
		 */

		/*
		 * PurpleGroup * purple_buddy_get_group(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_buddy_get_group(IntPtr buddy);

		public static PurpleGroup BuddyGetGroup(PurpleBuddy buddy)
		{
			return new PurpleGroup(purple_buddy_get_group(buddy.Reference));
		}

		/*
		 * GSList * purple_group_get_accounts(PurpleGroup * g)
		 * 
		 * Could not generate a wrapper for purple_group_get_accounts in file "blist.h".
		 * Message: The type could not be resolved (GSList * purple_group_get_accounts(PurpleGroup * g)).
		 */

		/*
		 * gboolean purple_group_on_account(PurpleGroup * g, PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_group_on_account(IntPtr g, IntPtr account);

		public static bool GroupOnAccount(PurpleGroup g, PurpleAccount account)
		{
			return purple_group_on_account(g.Reference, account.Reference);
		}

		/*
		 * char * purple_group_get_name(PurpleGroup * group)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_group_get_name(IntPtr group);

		public static string GroupGetName(PurpleGroup group)
		{
			return purple_group_get_name(group.Reference);
		}

		/*
		 * void purple_blist_add_account(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_add_account(IntPtr account);

		public static void AddAccount(PurpleAccount account)
		{
			purple_blist_add_account(account.Reference);
		}

		/*
		 * void purple_blist_remove_account(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_remove_account(IntPtr account);

		public static void RemoveAccount(PurpleAccount account)
		{
			purple_blist_remove_account(account.Reference);
		}

		/*
		 * int purple_blist_get_group_size(PurpleGroup * group, gboolean offline)
		 */
		[DllImport("libpurple.dll")]
		private static extern int purple_blist_get_group_size(IntPtr group, bool offline);

		public static int GetGroupSize(PurpleGroup group, bool offline)
		{
			return purple_blist_get_group_size(group.Reference, offline);
		}

		/*
		 * int purple_blist_get_group_online_count(PurpleGroup * group)
		 */
		[DllImport("libpurple.dll")]
		private static extern int purple_blist_get_group_online_count(IntPtr group);

		public static int GetGroupOnlineCount(PurpleGroup group)
		{
			return purple_blist_get_group_online_count(group.Reference);
		}

		/*
		 * void purple_blist_load()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_load();

		public static void Load()
		{
			purple_blist_load();
		}

		/*
		 * void purple_blist_schedule_save()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_schedule_save();

		public static void ScheduleSave()
		{
			purple_blist_schedule_save();
		}

		/*
		 * void purple_blist_request_add_group()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_request_add_group();

		public static void RequestAddGroup()
		{
			purple_blist_request_add_group();
		}

		/*
		 * void purple_blist_node_set_bool(PurpleBlistNode * node, char * key, gboolean value)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_node_set_bool(IntPtr node, string key, bool value);

		public static void NodeSetBool(PurpleBlistNode node, string key, bool value)
		{
			purple_blist_node_set_bool(node.Reference, key, value);
		}

		/*
		 * gboolean purple_blist_node_get_bool(PurpleBlistNode * node, char * key)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_blist_node_get_bool(IntPtr node, string key);

		public static bool NodeGetBool(PurpleBlistNode node, string key)
		{
			return purple_blist_node_get_bool(node.Reference, key);
		}

		/*
		 * void purple_blist_node_set_int(PurpleBlistNode * node, char * key, int value)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_node_set_int(IntPtr node, string key, int value);

		public static void NodeSetInt(PurpleBlistNode node, string key, int value)
		{
			purple_blist_node_set_int(node.Reference, key, value);
		}

		/*
		 * int purple_blist_node_get_int(PurpleBlistNode * node, char * key)
		 */
		[DllImport("libpurple.dll")]
		private static extern int purple_blist_node_get_int(IntPtr node, string key);

		public static int NodeGetInt(PurpleBlistNode node, string key)
		{
			return purple_blist_node_get_int(node.Reference, key);
		}

		/*
		 * char * purple_blist_node_get_string(PurpleBlistNode * node, char * key)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_blist_node_get_string(IntPtr node, string key);

		public static string NodeGetString(PurpleBlistNode node, string key)
		{
			return purple_blist_node_get_string(node.Reference, key);
		}

		/*
		 * void purple_blist_node_remove_setting(PurpleBlistNode * node, char * key)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_node_remove_setting(IntPtr node, string key);

		public static void NodeRemoveSetting(PurpleBlistNode node, string key)
		{
			purple_blist_node_remove_setting(node.Reference, key);
		}

		/*
		 * void purple_blist_node_set_flags(PurpleBlistNode * node, PurpleBlistNodeFlags flags)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_node_set_flags(IntPtr node, Blist.PurpleBlistNodeFlags flags);

		public static void NodeSetFlags(PurpleBlistNode node, Blist.PurpleBlistNodeFlags flags)
		{
			/* Unable to process flags, a KnownEnum. */
			throw new NotImplementedException();
		}

		/*
		 * PurpleBlistNodeFlags purple_blist_node_get_flags(PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern Blist.PurpleBlistNodeFlags purple_blist_node_get_flags(IntPtr node);

		public static Blist.PurpleBlistNodeFlags NodeGetFlags(PurpleBlistNode node)
		{
			/* Unable to process purple_blist_node_get_flags, a KnownEnum. */
			
		}

		/*
		 * PurpleBlistNodeType purple_blist_node_get_type(PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern Blist.PurpleBlistNodeType purple_blist_node_get_type(IntPtr node);

		public static Blist.PurpleBlistNodeType NodeGetType(PurpleBlistNode node)
		{
			/* Unable to process purple_blist_node_get_type, a KnownEnum. */
			
		}

		/*
		 * GList * purple_blist_node_get_extended_menu(PurpleBlistNode * n)
		 * 
		 * Could not generate a wrapper for purple_blist_node_get_extended_menu in file "blist.h".
		 * Message: The type could not be resolved (GList * purple_blist_node_get_extended_menu(PurpleBlistNode * n)).
		 */

		/*
		 * void purple_blist_set_ui_ops(PurpleBlistUiOps * ops)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_set_ui_ops(IntPtr ops);

		public static void SetUiOps(PurpleBlistUiOps ops)
		{
			purple_blist_set_ui_ops(ops.Reference);
		}

		/*
		 * PurpleBlistUiOps * purple_blist_get_ui_ops()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_get_ui_ops();

		public static PurpleBlistUiOps GetUiOps()
		{
			return new PurpleBlistUiOps(purple_blist_get_ui_ops());
		}

		/*
		 * void * purple_blist_get_handle()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_get_handle();

		public static IntPtr GetHandle()
		{
			return purple_blist_get_handle();
		}

		/*
		 * void purple_blist_init()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_init();

		public static void Init()
		{
			purple_blist_init();
		}

		/*
		 * void purple_blist_uninit()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_uninit();

		public static void Uninit()
		{
			purple_blist_uninit();
		}

	}
}

